--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,42 +1,208 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block meta %}
+{% extends 'base.html' %} {% load static %} {% block meta %}
 <title>SiniBeli</title>
-{% endblock meta %}
-{% block content %}
-{% include 'navbar.html' %}
+{% endblock meta %} {% block content %} {% include 'navbar.html' %}
 <div class="overflow-x-hidden min-h-screen bg-gray-800 flex flex-col">
-    <div class="text-center bg-gradient-to-r from-yellow-100 via-emerald-300 to-blue-100 pt-16 shadow-lg">
-        <h1 class="text-6xl font-bold text-black pb-16">{{app_intro}}!</h1>
+  <div class="text-center bg-gradient-to-r from-yellow-100 via-emerald-300 to-blue-100 pt-16 shadow-lg">
+    <h1 class="text-6xl font-bold text-black pb-16">{{app_intro}}!</h1>
+  </div>
+  <div class="px-3 md:px-8 pb-8 pt-16">
+    <div class="flex justify-end mb-6">
+      <a href="{% url 'main:create_product' %}" class="bg-lime-600 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+        Add New Product
+      </a>
+      <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="bg-lime-600 hover:bg-lime-700 text-white font-bold mx-2 py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
+        Add New Product by AJAX
+      </button>
     </div>
-    <div class="px-3 md:px-8 pb-8 pt-16">
-        <div class="flex justify-end mb-6">
-            <a href="{% url 'main:create_product' %}"
-                class="bg-lime-600 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-                Add New Product
-            </a>
-        </div>
 
-        {% if not products %}
-        <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-            <img src="{% static 'images/Sad-Emoji-21.png' %}" alt="Sad face" class="w-32 h-32 mb-4" />
-            <p class="text-center text-gray-300 mt-4">Belum ada data product disini.</p>
-        </div>
-        {% else %}
-        <div class="flex flex-col md:flex-row flex-wrap items-center justify-center gap-6 w-full">
-            {% for product in products %}
-                {% include 'card_product.html' with product=product %}
-            {% endfor %}
+    <div id="product_cards"></div>
+
+    <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+      <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+        
+        <!-- Modal header -->
+        <div class="flex items-center justify-between p-4 border-b rounded-t">
+          <h3 class="text-xl font-semibold text-gray-900">
+            Add Product
+          </h3>
+          <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+            <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+            </svg>
+            <span class="sr-only">Close modal</span>
+          </button>
         </div>
         
-        {% endif %}
-        <div class="px-4 mb-2">
-            <div class="flex rounded-md items-center bg-lime-600 my-4 py-2 px-5 w-fit mx-auto">
-                <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
+        <!-- Modal body -->
+        <div class="px-6 py-4 space-y-6 form-style">
+          <form id="productForm" enctype="multipart/form-data">
+            
+            <!-- Product Name -->
+            <div class="mb-4">
+              <label for="productName" class="block text-sm font-medium text-gray-700">Product Name</label>
+              <input type="text" id="productName" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product name" required>
             </div>
+            
+            <!-- Product Price -->
+            <div class="mb-4">
+              <label for="productPrice" class="block text-sm font-medium text-gray-700">Price (IDR)</label>
+              <input type="number" id="productPrice" name="price" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product price in IDR" step="0.01" min="0" required>
+            </div>            
+    
+            <!-- Product Description -->
+            <div class="mb-4">
+              <label for="productDescription" class="block text-sm font-medium text-gray-700">Description</label>
+              <textarea id="productDescription" name="description" rows="4" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product description" required></textarea>
+            </div>
+    
+            <!-- Product Image File -->
+            <div class="mb-4">
+              <label for="productImage" class="block text-sm font-medium text-gray-700">Upload Image</label>
+              <input type="file" id="productImage" name="product_image" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" accept="image/*" required>
+            </div>
+            
+          </form>
         </div>
-        <p class="text-center text-gray-300 mt-4">Muhammad Radhiya Arshq {{npm}} {{kelas}} </p>
+        
+        <!-- Modal footer -->
+        <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+          <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+          <button type="submit" id="submitProductEntry" form="productEntryForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+        </div>
+    
+      </div>
+    </div>    
+
+    <div class="px-4 mb-2">
+      <div class="flex rounded-md items-center bg-lime-600 my-4 py-2 px-5 w-fit mx-auto">
+        <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
+      </div>
     </div>
+    <p class="text-center text-gray-300 mt-4">
+      Muhammad Radhiya Arshq {{npm}} {{kelas}}
+    </p>
+  </div>
 </div>
+<script>
+  async function getProduct() {
+    return fetch("{% url 'main:show_json' %}").then((res) => res.json());
+    //menggunakan fetch() API ke data JSON secara asynchronous.
+    //Setelah data di-fetch, fungsi then() digunakan untuk melakukan parse pada data JSON menjadi objek JavaScript.
+  }
+
+  async function refreshProducts() {
+    document.getElementById("product_cards").innerHTML = "";
+    document.getElementById("product_cards").className = "";
+    const products = await getProduct();
+    let htmlString = "";
+    let classNameString = "";
+
+    if (products.length === 0) {
+      classNameString =
+        "flex flex-col items-center justify-center min-h-[24rem] p-6";
+      htmlString = `
+                <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+                    <img src="{% static 'images/Sad-Emoji-21.png' %}" alt="Sad face" class="w-32 h-32 mb-4" />
+                    <p class="text-center text-gray-300 mt-4">Belum ada data product disini.</p>
+                </div>
+            `;
+    } else {
+      classNameString =
+        "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full";
+      products.forEach((item) => {
+        htmlString += `
+                <div class="relative break-inside-avoid">
+                  <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
+                      
+                      <!-- Product Image -->
+                      <img src="${item.image}" alt="${item.fields.name}" class="w-full h-auto rounded-t-lg">
+                      
+                      <!-- Product Details -->
+                      <div class="p-4">
+                          <!-- Product Name -->
+                          <h3 class="font-bold text-xl mb-2 text-center">${item.fields.name}</h3>
+                          
+                          <!-- Product Description -->
+                          <p class="font-semibold text-lg mb-2">Description</p>
+                          <p class="text-gray-700 mb-4">
+                              <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">${item.fields.description}</span>
+                          </p>
+                          
+                          <!-- Product Price -->
+                          <p class="text-gray-800 font-bold text-lg mb-4">Price: Rp${item.fields.price}.00</p>
+                      </div>
+                      
+                      <!-- Buttons for Edit and Delete -->
+                      <div class="p-4 flex justify-between">
+                          <!-- Edit Button -->
+                          <a href="/edit_product/${item.pk}" class="bg-yellow-500 hover:bg-yellow-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                                  <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                              </svg>
+                          </a>
+                          <!-- Delete Button -->
+                          <a href="/delete/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                                  <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+                              </svg>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+                `;
+      });
+    }
+    document.getElementById("product_cards").className = classNameString;
+    document.getElementById("product_cards").innerHTML = htmlString;
+  }
+  refreshProducts();
+
+  const modal = document.getElementById('crudModal');
+  const modalContent = document.getElementById('crudModalContent');
+
+  function showModal() {
+      const modal = document.getElementById('crudModal');
+      const modalContent = document.getElementById('crudModalContent');
+
+      modal.classList.remove('hidden'); 
+      setTimeout(() => {
+        modalContent.classList.remove('opacity-0', 'scale-95');
+        modalContent.classList.add('opacity-100', 'scale-100');
+      }, 50); 
+  }
+
+  function hideModal() {
+      const modal = document.getElementById('crudModal');
+      const modalContent = document.getElementById('crudModalContent');
+
+      modalContent.classList.remove('opacity-100', 'scale-100');
+      modalContent.classList.add('opacity-0', 'scale-95');
+
+      setTimeout(() => {
+        modal.classList.add('hidden');
+      }, 150); 
+  }
+
+  document.getElementById("cancelButton").addEventListener("click", hideModal);
+  document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+
+  function addProduct() {
+    fetch("{% url 'main:add_product_ajax' %}", {
+      method: "POST",
+      body: new FormData(document.querySelector('#productForm')), //membuat sebuah FormData baru yang datanya diambil dari form pada modal
+    }) //FormData dapat digunakan untuk mengirimkan data form tersebut ke server.
+    .then(response => refreshProducts())
+
+    document.getElementById("productForm").reset(); //mengosongkan isi field form modal setelah di-submit.
+    document.querySelector("[data-modal-toggle='crudModal']").click();
+
+    return false;
+  }
+  //Menambahkan event listener pada form yang telah diambil/di-select dari DOM pada bagian sebelumnya, 
+  //lalu menambahkan sebuah fungsi callback yang akan dipanggil ketika form di-submit
+  document.getElementById("productForm").addEventListener("submit", (e) => {
+    e.preventDefault();
+    addProduct(); //Memanggil fungsi untuk menambahkan product
+  })
+</script>
 {% endblock content %}
