--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -17,14 +17,16 @@
 
     <div id="product_cards"></div>
 
-    <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
-      <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+    <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-black bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+      <div id="crudModalContent" class="relative bg-gradient-to-r from-lime-100 to-blue-100 rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
         
         <!-- Modal header -->
-        <div class="flex items-center justify-between p-4 border-b rounded-t">
-          <h3 class="text-xl font-semibold text-gray-900">
-            Add Product
-          </h3>
+        <div class="flex flex items-center justify-center p-4 border-b border-gray-800 rounded-t">
+          <div class="w-full flex justify-center">
+            <h3 class="text-xl font-semibold text-gray-900 text-center">
+              Add Product
+            </h3>
+          </div>
           <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
             <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
@@ -40,34 +42,34 @@
             <!-- Product Name -->
             <div class="mb-4">
               <label for="productName" class="block text-sm font-medium text-gray-700">Product Name</label>
-              <input type="text" id="productName" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product name" required>
+              <input type="text" id="productName" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-lime-700" placeholder="Enter product name" required>
             </div>
             
             <!-- Product Price -->
             <div class="mb-4">
               <label for="productPrice" class="block text-sm font-medium text-gray-700">Price (IDR)</label>
-              <input type="number" id="productPrice" name="price" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product price in IDR" step="0.01" min="0" required>
+              <input type="number" id="productPrice" name="price" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-lime-700" placeholder="Enter product price in IDR" step="0.01" min="0" required>
             </div>            
     
             <!-- Product Description -->
             <div class="mb-4">
               <label for="productDescription" class="block text-sm font-medium text-gray-700">Description</label>
-              <textarea id="productDescription" name="description" rows="4" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product description" required></textarea>
+              <textarea id="productDescription" name="description" rows="4" class="mt-1 block w-full h-52 resize-none border border-gray-400 rounded-md p-2 hover:border-lime-700" placeholder="Enter product description" required></textarea>
             </div>
     
             <!-- Product Image File -->
             <div class="mb-4">
               <label for="productImage" class="block text-sm font-medium text-gray-700">Upload Image</label>
-              <input type="file" id="productImage" name="product_image" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" accept="image/*" required>
+              <input type="file" id="productImage" name="product_image" class="mt-1 block w-full rounded-md p-2" accept="image/*" required>
             </div>
             
           </form>
         </div>
         
         <!-- Modal footer -->
-        <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+        <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t rounded-b justify-center md:justify-end">
           <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-          <button type="submit" id="submitProductEntry" form="productEntryForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+          <button type="submit" id="submitProductEntry" form="productForm" class="bg-lime-500 hover:bg-lime-600 text-white font-bold py-2 px-4 rounded-lg">Add Product</button>
         </div>
     
       </div>
@@ -108,11 +110,11 @@
             `;
     } else {
       classNameString =
-        "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full";
+        "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-5/6";
       products.forEach((item) => {
         htmlString += `
                 <div class="relative break-inside-avoid">
-                  <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
+                  <div class="relative top-5 bg-lime-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-lime-300 transform hover:scale-105 transition-transform duration-300">
                       
                       <!-- Product Image -->
                       <img src="${item.image}" alt="${item.fields.name}" class="w-full h-auto rounded-t-lg">
@@ -133,7 +135,7 @@
                       </div>
                       
                       <!-- Buttons for Edit and Delete -->
-                      <div class="p-4 flex justify-between">
+                      <div class="p-4 flex space-x-2">
                           <!-- Edit Button -->
                           <a href="/edit_product/${item.pk}" class="bg-yellow-500 hover:bg-yellow-600 text-white rounded-full p-2 transition duration-300 shadow-md">
                               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
@@ -183,6 +185,13 @@
       }, 150); 
   }
 
+  modal.addEventListener('click', (event) => {
+    // Check if the click is outside the modal content
+    if (!modalContent.contains(event.target)) {
+      hideModal();  // Close the modal
+    }
+  });
+
   document.getElementById("cancelButton").addEventListener("click", hideModal);
   document.getElementById("closeModalBtn").addEventListener("click", hideModal);
 
@@ -191,7 +200,17 @@
       method: "POST",
       body: new FormData(document.querySelector('#productForm')), //membuat sebuah FormData baru yang datanya diambil dari form pada modal
     }) //FormData dapat digunakan untuk mengirimkan data form tersebut ke server.
-    .then(response => refreshProducts())
+    .then(response => {
+      if (response.ok) {
+          refreshProducts(); // Refresh the products list
+          hideModal(); // Close the modal after product creation
+      } else {
+          console.error("Product creation failed.");
+      }
+    })
+    .catch(error => {
+      console.error("Error:", error);
+    });
 
     document.getElementById("productForm").reset(); //mengosongkan isi field form modal setelah di-submit.
     document.querySelector("[data-modal-toggle='crudModal']").click();
