--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block meta %}
 <title>SiniBeli</title>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
 {% endblock meta %} {% block content %} {% include 'navbar.html' %}
 <div class="overflow-x-hidden min-h-screen bg-gray-800 flex flex-col">
   <div class="text-center bg-gradient-to-r from-yellow-100 via-emerald-300 to-blue-100 pt-16 shadow-lg">
@@ -112,17 +113,18 @@
       classNameString =
         "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-5/6 mx-auto";
       products.forEach((item) => {
+        const name = DOMPurify.sanitize(item.fields.name);
         htmlString += `
                 <div class="flex justify-center">
                   <div class="relative top-5 bg-lime-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-lime-300 transform hover:scale-105 transition-transform duration-300">
                       
                       <!-- Product Image -->
-                      <img src="${item.image}" alt="${item.fields.name}" class="w-full h-auto rounded-t-lg">
+                      <img src="${item.image}" alt="${name}" class="w-full h-auto rounded-t-lg">
                       
                       <!-- Product Details -->
                       <div class="p-4">
                           <!-- Product Name -->
-                          <h3 class="font-bold text-xl mb-2 text-center">${item.fields.name}</h3>
+                          <h3 class="font-bold text-xl mb-2 text-center">${name}</h3>
                           
                           <!-- Product Description -->
                           <p class="font-semibold text-lg mb-2">Description</p>
