--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -119,7 +119,7 @@
                   <div class="relative top-5 bg-lime-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-lime-300 transform hover:scale-105 transition-transform duration-300">
                       
                       <!-- Product Image -->
-                      <img src="${item.image}" alt="${name}" class="w-full h-auto rounded-t-lg">
+                      <img src="media/${item.fields.image}" alt="${name}" class="w-full h-auto rounded-t-lg">
                       
                       <!-- Product Details -->
                       <div class="p-4">
