--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -111,7 +111,7 @@
             `;
     } else {
       classNameString =
-        "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-5/6 mx-auto";
+        "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-5/6 mx-auto";
       products.forEach((item) => {
         const name = DOMPurify.sanitize(item.fields.name);
         htmlString += `
